--- a/Group3Game/src/main/res/values/strings.xml
+++ b/Group3Game/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">TouchMe</string>
+    <string name="app_name">Group3 Game</string>
     <string name="defaultText">0</string>
     <string name="labelRed">Red</string>
     <string name="labelGreen">Green</string>
