--- a/Group3Game/src/main/res/values/strings.xml
+++ b/Group3Game/src/main/res/values/strings.xml
@@ -4,5 +4,5 @@
     <string name="defaultText">0</string>
     <string name="labelRed">Red</string>
     <string name="labelGreen">Green</string>
-    <string name="menuClear">Clear</string>
+    <string name="resetOption">Reset</string>
 </resources>
